quick fix to make all text clean and visible - white text with grey shadow

--- a/src/components/pages/pagestyle.css
+++ b/src/components/pages/pagestyle.css
@@ -38,18 +38,18 @@ p {
     color: white
 }
 
-.description {
+/* .description {
     color: rgba(0,0,0,.5);
-}
+} */
 
 @media screen and (max-width: 415px) {
     .img {
         width: 100%;
     }
 
-    p {
+    /* p {
         color: rgba(0,0,0,.5)
-    }
+    } */
 
     .profile-pic {
         width: 100%;
